src/view/browser/render/snapshots/nifi_lens__view__browser__render__version_control_modal__tests__vc_modal_below_minimum_size.snap
---
source: src/view/browser/render/version_control_modal.rs
expression: "format!(\"{}\", term.backend())"
---
"           terminal too small           "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
