src/view/browser/render/snapshots/nifi_lens__view__browser__render__version_control_modal__tests__vc_modal_failed.snap
---
source: src/view/browser/render/version_control_modal.rs
assertion_line: 499
expression: "format!(\"{}\", term.backend())"
---
"┌ ingest · version control ────────────────────────────────────────────────────────────────────────┐"
"│┌ Identity ──────────────────────────────────────────────────────────────────────────────────────┐│"
"││registry  ops-registry / bucket=ops / branch=main                                               ││"
"││flow      diff-pipeline · flow_id=4f3a-aaa… · v3                                                ││"
"││state     SYNC-ERR                                                                              ││"
"││why       Local changes have been made and a newer version exists                               ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│failed to load:                                                                                   │"
"│registry unreachable: timeout                                                                     │"
"│                                                                                                  │"
"│press r to retry                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│failed — press r to retry                                                                         │"
"│[Esc] close · [/] find · [c] copy · [e] bundle diffs · [r] refresh                                │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
