src/view/browser/render/snapshots/nifi_lens__view__browser__render__version_control_modal__tests__vc_modal_loaded_two_components.snap
---
source: src/view/browser/render/version_control_modal.rs
assertion_line: 424
expression: "format!(\"{}\", term.backend())"
---
"┌ ingest · version control ────────────────────────────────────────────────────────────────────────┐"
"│┌ Identity ──────────────────────────────────────────────────────────────────────────────────────┐│"
"││registry  ops-registry / bucket=ops / branch=main                                               ││"
"││flow      diff-pipeline · flow_id=4f3a-aaa… · v3                                                ││"
"││state     STALE+MOD                                                                             ││"
"││why       Local changes have been made and a newer version exists                               ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│─ Processor · UpdateRecord-enrich · 4f3aaaaa ─                                                    │"
"│PROPERTY_CHANGED   "Record Reader"  'csv-reader' → 'json-reader'                                  │"
"│                                                                                                  │"
"│─ Connection · csv→log · 71b2bbbb ─                                                               │"
"│COMPONENT_REMOVED  selected relationship 'retry'                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│2 differences across 2 components · bundle diffs hidden                                           │"
"│[Esc] close · [/] find · [c] copy · [e] bundle diffs · [r] refresh                                │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
